deployment/app-deploy/web/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - args:
        - /bin/ash
        - -c
        - yarn && ./node_modules/.bin/ember s
        name: web
        ports:
        - containerPort: 4200
          hostIP: 127.0.0.1
        - containerPort: 49153
          hostIP: 127.0.0.1
        resources: {}
        tty: true
      restartPolicy: Always
status: {}
