deployment/app-deploy/web/00-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: observer
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: web
